--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<p>Kaixo</p>
+<!DOCTYPE HTML>
+<html>
+<head>
+<meta charset="utf-8">
+</head>
+<body>
+    <h1>El Ártico ha perdido el 14% de su hielo marino perenne en un solo año</h1>
+
+    <p><b>WASHINGTON</b>.- El hielo perenne del Ártico se redujo en un 14% entre 2004 y 2005, al perder <b>720.000 kilómetros cuadrados</b>, una superficie superior a la Península Ibérica, según datos de la NASA.</p>
+
+    <p>Según el Laboratorio de Propulsión a Chorro (JPL), la pérdida del hielo perenne, que debiera mantenerse durante todo el verano, fue todavía mayor y se acercó a un 50% en el momento en que ese hielo se desplazaba desde el Ártico oriental hacia el oeste.</p>
+    <p><strong>Son Nghiem</strong>, investigador del JPL, subrayó que:</p>
+
+    <blockquote><i>"los cambios registrados en esos años en el hielo ártico son rápidos y espectaculares". Añadió que, de mantenerse la situación, ésta tendrá un impacto "profundo en el ambiente, así como en el transporte marino y el comercio"</i>.</blockquote>
+</body>
+</html>
