--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<meta charset="utf-8">
+    <meta charset="utf-8">
+    <title>El Ártico ha perdido el 14% de su hielo marino perenne en un solo año</title>
 </head>
 <body>
     <h1>El Ártico ha perdido el 14% de su hielo marino perenne en un solo año</h1>
