--- a/AJAX/ejercicio1/index.html
+++ b/AJAX/ejercicio1/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Ejercicio 1 - Estados de la petición AJAX</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <script type="text/javascript" src="code.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <script type="text/javascript" src="js/code.js"></script>
 </head>
 <body>
   <form action="#">
