--- a/CSS2/ejercicio8-periodico/itziar.html
+++ b/CSS2/ejercicio8-periodico/itziar.html
@@ -4,7 +4,11 @@
         <meta charset="utf-8">
         <link rel="icon" type="image/ico" href="favicon.ico">
         <link href="http://necolas.github.io/normalize.css/3.0.2/normalize.css" rel="stylesheet" type="text/css" />
+       <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+
         <link href="css/style.css" rel="stylesheet" type="text/css" />
+
         <title>Periódico</title>
 
     </head>
@@ -14,13 +18,13 @@
         </div>
 
         <div class="menu">
-            <ul>
-            <li>Link 1</li>
-            <li>Link 2</li>
-            <li>Link 3</li>
-            <li>Link 4</li>
-            <li>Link 5</li>
-            </ul>
+            <Ul  class = "nav nav-tabs" >
+  <li  role= "presentation"  class= "active" ><a  href= "#" > Inicio </a></li>
+  <li  role= "presentation" ><a  href= "#" > Link 1 </a></li>
+  <li  role= "presentation" ><a  href= "#" > Link 2 </a></li>
+<li  role= "presentation" ><a  href= "#" > Link 3 </a></li>
+  <li  role= "presentation" ><a  href= "#" > Link 4 </a></li>
+</ul>
         </div>
 
         <div class="wrapper">
@@ -28,9 +32,12 @@
             <div class="ads">
             <img src="http://pj.b5z.net/i/u/2061533/i/Banner_Clasificados_vertical.jpg" alt="imagen noticia" />
 
+
+
             </div>
 
             <div class="featured">
+                <span  class = "glyphicon glyphicon-education"> </span>
                 <h2>Las lluvias provocan varios desprendimientos</h2>
                 <h3>Neque porro quisquam est qui dolorem ipsum</h3>
                 <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original.  Es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500. </p>
@@ -40,8 +47,13 @@
                 </div>
 
             </div>
-
+            <div  class = "btn-grupo"  role = "grupo"  etiqueta aria = "..." >
+              <button  type = "button"  class = "btn btn-default" > Gipuzkoa </ button>
+              <button  type = "button"  class = "btn btn-default" > Educación </ button>
+              <button  type = "button"  class = "btn btn-default" > Economía </ button>
+            </div>
             <div class="news">
+                <span  class = "glyphicon glyphicon-tree-conifer"> </span>
                 <h2>Titular</h2>
                 <h3>Subtítulo</h3>
                 <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. </p>
@@ -53,6 +65,8 @@
             </div>
 
             <div class="news">
+
+                <span  class = "glyphicon glyphicon-film"> </span>
                 <h2>Titular</h2>
                 <h3>Subtítulo</h3>
                 <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. </p>
